[Update] 정보게시판 글 스크랩 기능 구현

--- a/semiProject/src/main/resources/static/css/mypage/posts.css
+++ b/semiProject/src/main/resources/static/css/mypage/posts.css
@@ -136,6 +136,7 @@ body {
     display: flex;
     justify-content: center;
     gap: 5px;
+    margin-bottom: 100px;
 }
 
 .search-area select, .search-area input {
