--- a/semiProject/src/main/resources/templates/mypage/scraps.html
+++ b/semiProject/src/main/resources/templates/mypage/scraps.html
@@ -19,58 +19,62 @@
             <div class="board-list-area">
                 <table class="board-table">
 									      <colgroup>
-                            <col style="width: 5%;">  <col style="width: 20%;"> <col style="width: 40%;"> 
-                            <col style="width: 10%;"> <col style="width: 10%;"> <col style="width: 7%;">  
-                            <col style="width: 8%;">  
+                            <col style="width: 5%;">  <col style="width: 15%;"> <col style="width: 40%;"> 
+                            <col style="width: 15%;"> <col style="width: 10%;"> <col style="width: 7%;">  
+                            <col style="width: 7%;">  
                         </colgroup>
                      <thead>
                         <tr>
                             <th>번호</th>
                             <th>게시판 유형</th>
                             <th>제목</th>
-                            <th>닉네임</th>
-                            <th>작성일</th>
+                            <th>닉네임(기관)</th>
+                            <th>작성일(시작일)</th>
                             <th>조회수</th>
                             <th>좋아요</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr th:if="${#lists.isEmpty(map.boardList)}">
-                            <td colspan="7" class="empty-list">스크랩한 게시글이 없습니다.</td>
-                        </tr>
+                    <tr th:if="${#lists.isEmpty(map.boardList)}">
+                        <td colspan="7" class="empty-list">스크랩한 게시글이 없습니다.</td>
+                    </tr>
 
-                        <tr th:unless="${#lists.isEmpty(map.boardList)}" th:each="board : ${map.boardList}">
-                            <td th:text="${board.boardNo}"></td>
-                            <td>
-                                <th:block th:switch="${board.boardCode}">
-                                    <span th:case="1">자유 게시판</span>
-                                    <span th:case="2">정보 게시판</span>
-                                    <span th:case="3">봉사후기</span>
-                                    <span th:case="4">공지사항</span>
-                                    <span th:case="5">고객지원</span>
-                                    <span th:case="*">기타</span>
-                                </th:block>
-                            </td>
-                            
-														<td class="title-col">
-																<a th:if="${board.boardCode == 2}" 
-																	th:href="@{/info/detail/{boardNo}(boardNo=${board.boardNo}, cp=${map.pagination.currentPage}, from='scrap')}"
-																	th:text="${board.boardTitle}">
-																	정보 제목
-																</a>
+                    <tr th:unless="${#lists.isEmpty(map.boardList)}" th:each="board : ${map.boardList}">
+                        <td th:text="${board.boardNo}"></td>
 
-																<a th:unless="${board.boardCode == 2}" 
-																	th:href="@{/board/{boardCode}/{boardNo}(boardCode=${board.boardCode}, boardNo=${board.boardNo}, cp=${map.pagination.currentPage}, from='scrap')}" 
-																	th:text="${board.boardTitle}">
-																	일반 제목
-																</a>
-														</td>
-                            
-                            <td th:text="${board.memberNickname}"></td>
-                            <td th:text="${board.boardWriteDate}"></td>
-                            <td th:text="${board.readCount}"></td>
-                            <td th:text="${board.likeCount}"></td>
-                        </tr>
+                        <td>
+                        <th:block th:switch="${board.boardCode}">
+                            <span th:case="1">자유 게시판</span>
+                            <span th:case="2">정보 게시판</span> 
+                            <span th:case="3">봉사후기</span>
+                            <span th:case="4">공지사항</span>
+                            <span th:case="5">고객지원</span>
+                            <span th:case="*">기타</span>
+                        </th:block>
+                        </td>
+
+                        <td class="title-col">
+                        <a th:if="${board.boardCode == 2}" 
+                            th:href="@{/info/detail/{boardNo}(boardNo=${board.boardNo}, cp=${map.pagination.currentPage}, from='scrap')}"
+                            th:text="${board.boardTitle}">
+                            정보 제목
+                        </a>
+
+                        <a th:unless="${board.boardCode == 2}" 
+                            th:href="@{/board/{boardCode}/{boardNo}(boardCode=${board.boardCode}, boardNo=${board.boardNo}, cp=${map.pagination.currentPage}, from='scrap')}" 
+                            th:text="${board.boardTitle}">
+                            일반 제목
+                        </a>
+                        </td>
+
+                        <td class="nickname-col" th:text="${board.memberNickname}"></td>
+
+                        <td th:text="${board.boardWriteDate}"></td>
+
+                        <td th:text="${board.boardCode == 2 ? '-' : board.readCount}"></td>
+
+                        <td th:text="${board.boardCode == 2 ? '-' : board.likeCount}"></td>
+                    </tr>
                     </tbody>
                 </table>
             </div>
