--- a/semiProject/src/main/resources/static/css/mypage/comments.css
+++ b/semiProject/src/main/resources/static/css/mypage/comments.css
@@ -135,6 +135,7 @@ body {
     display: flex;
     justify-content: center;
     gap: 5px;
+    margin-bottom: 100px;
 }
 
 .search-area select, .search-area input {
