--- a/semiProject/src/main/resources/templates/info/infoList.html
+++ b/semiProject/src/main/resources/templates/info/infoList.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <head>
     <meta charset="UTF-8">
     <title>봉사 참여 정보</title>
     <link rel="stylesheet" th:href="@{/css/info/infoList.css}">
 </head>
+
 <body>
     <th:block th:replace="~{common/header}"></th:block>
 
@@ -16,25 +18,37 @@
                 <div class="filter-column">
                     <div class="filter-label">봉사지역</div>
                     <div class="filter-select-box">
-                        <select name="schSido" id="sidoCode"><option value="">전체(시도)</option></select>
-                        <select name="schSign" id="gugunCode"><option value="">전체(시군구)</option></select>
+                        <select name="schSido" id="sidoCode">
+                            <option value="">전체(시도)</option>
+                        </select>
+                        <select name="schSign" id="gugunCode">
+                            <option value="">전체(시군구)</option>
+                        </select>
                     </div>
                 </div>
                 <div class="filter-column">
                     <div class="filter-label">봉사분야</div>
-                    <div class="filter-select-box"><select name="actRm" id="category"><option value="">전체</option></select></div>
+                    <div class="filter-select-box"><select name="actRm" id="category">
+                            <option value="">전체</option>
+                        </select></div>
                 </div>
                 <div class="filter-column">
                     <div class="filter-label">활동구분</div>
-                    <div class="filter-select-box"><select name="actType" id="actType"><option value="">전체</option></select></div>
+                    <div class="filter-select-box"><select name="actType" id="actType">
+                            <option value="">전체</option>
+                        </select></div>
                 </div>
                 <div class="filter-column">
                     <div class="filter-label">봉사대상</div>
-                    <div class="filter-select-box"><select name="target" id="target"><option value="">전체</option></select></div>
+                    <div class="filter-select-box"><select name="target" id="target">
+                            <option value="">전체</option>
+                        </select></div>
                 </div>
                 <div class="filter-column">
                     <div class="filter-label">모집상태</div>
-                    <div class="filter-select-box"><select name="status"><option value="모집중">모집중</option></select></div>
+                    <div class="filter-select-box"><select name="status">
+                            <option value="모집중">모집중</option>
+                        </select></div>
                 </div>
             </div>
 
@@ -42,12 +56,15 @@
                 <div class="detail-row">
                     <div class="detail-item">
                         <span class="orange-dot"></span><label>봉사기간</label>
-                        <input type="date" name="bgnde" th:value="${param.bgnde}"> &nbsp;~&nbsp; <input type="date" name="endde" th:value="${param.endde}">
+                        <input type="date" name="bgnde" th:value="${param.bgnde}"> &nbsp;~&nbsp; <input type="date"
+                            name="endde" th:value="${param.endde}">
                     </div>
                     <div class="detail-item">
                         <span class="orange-dot"></span><label>봉사자유형</label>
-                        <label><input type="checkbox" name="volsType" value="adult" onclick="checkOnlyOne(this)" th:checked="${param.volsType == 'adult'}"> 성인</label> &nbsp;
-                        <label><input type="checkbox" name="volsType" value="teen" onclick="checkOnlyOne(this)" th:checked="${param.volsType == 'teen'}"> 청소년</label>
+                        <label><input type="checkbox" name="volsType" value="adult" onclick="checkOnlyOne(this)"
+                                th:checked="${param.volsType == 'adult'}"> 성인</label> &nbsp;
+                        <label><input type="checkbox" name="volsType" value="teen" onclick="checkOnlyOne(this)"
+                                th:checked="${param.volsType == 'teen'}"> 청소년</label>
                     </div>
                 </div>
 
@@ -55,11 +72,18 @@
                     <div class="detail-item" style="flex: 1;">
                         <span class="orange-dot"></span><label>인정시간</label>
                         <div class="checkbox-group">
-                            <label><input type="checkbox" name="searchTime" value="all" onclick="checkOnlyOne(this)" th:checked="${param.searchTime == null || param.searchTime == 'all'}"> 전체</label> &nbsp;
+                            <label><input type="checkbox" name="searchTime" value="all" onclick="checkOnlyOne(this)"
+                                    th:checked="${param.searchTime == null || param.searchTime == 'all'}"> 전체</label>
+                            &nbsp;
                             <th:block th:each="num : ${#numbers.sequence(1, 7)}">
-                                <label><input type="checkbox" name="searchTime" th:value="${num}" onclick="checkOnlyOne(this)" th:checked="${param.searchTime != null && param.searchTime[0] == #strings.toString(num)}"> [[${num}]]시간</label> &nbsp;
+                                <label><input type="checkbox" name="searchTime" th:value="${num}"
+                                        onclick="checkOnlyOne(this)"
+                                        th:checked="${param.searchTime != null && param.searchTime[0] == #strings.toString(num)}">
+                                    [[${num}]]시간</label> &nbsp;
                             </th:block>
-                            <label><input type="checkbox" name="searchTime" value="9" onclick="checkOnlyOne(this)" th:checked="${param.searchTime != null && param.searchTime[0] == '9'}"> 8시간 이상</label>
+                            <label><input type="checkbox" name="searchTime" value="9" onclick="checkOnlyOne(this)"
+                                    th:checked="${param.searchTime != null && param.searchTime[0] == '9'}"> 8시간
+                                이상</label>
                         </div>
                     </div>
                 </div>
@@ -67,32 +91,36 @@
                 <div class="detail-row">
                     <div class="detail-item">
                         <span class="orange-dot"></span><label>봉사명</label>
-                        <input type="text" name="progrmNm" placeholder="봉사명을 입력하세요" style="width: 350px;" th:value="${param.progrmNm}">
+                        <input type="text" name="progrmNm" placeholder="봉사명을 입력하세요" style="width: 350px;"
+                            th:value="${param.progrmNm}">
                     </div>
                     <div class="detail-item">
                         <span class="orange-dot"></span><label>활동기관</label>
                         <input type="text" name="nanmmByNm" style="width: 350px;" th:value="${param.nanmmByNm}">
                     </div>
                 </div>
-                
+
                 <div class="btn-group">
                     <button type="submit" class="btn-search">검색</button>
                     <button type="reset" class="btn-reset-gray">초기화</button>
-                    <button type="button" class="btn-sync" id="refreshOpenApi" 
-                            sec:authorize="hasRole('ADMIN')">동기화</button>
+
+                    <button type="button" class="btn-sync" id="refreshOpenApi"
+                        th:if="${session.loginMember != null and session.loginMember.authority + '' == '2'}">
+                        동기화
+                    </button>
                 </div>
             </div>
         </form>
 
         <div class="card-list-wrapper">
             <div th:if="${#lists.isEmpty(infoList)}" class="no-data">조회된 정보가 없습니다.</div>
-            
+
             <div th:each="info : ${infoList}" class="info-card">
                 <div class="card-left">
                     <div class="card-tags">시간인증 | 오프라인 | [[${info.actRm}]]</div>
                     <div class="card-title">
-                        <a th:href="@{/info/detail/{no}(no=${info.infoBoardNo})}" 
-                           th:text="${info.progrmNm}" style="text-decoration: none; color: inherit; cursor: pointer;">봉사 제목</a>
+                        <a th:href="@{/info/detail/{no}(no=${info.infoBoardNo})}" th:text="${info.progrmNm}"
+                            style="text-decoration: none; color: inherit; cursor: pointer;">봉사 제목</a>
                     </div>
                     <div class="card-info-grid">
                         <span><b>[모집기간]</b> [[${info.noticeBgnDe}]]~[[${info.noticeEndDe}]]</span>
@@ -120,23 +148,26 @@
                                        '&bgnde=' + ${param.bgnde != null ? param.bgnde : ''} + 
                                        '&endde=' + ${param.endde != null ? param.endde : ''} + 
                                        '&searchTime=' + ${param.searchTime != null ? param.searchTime : ''}">
-                
+
                 <li><a th:href="|/info/listPage?cp=1&${queryStr}|">&lt;&lt;</a></li>
                 <li><a th:href="|/info/listPage?cp=${pagination.prevPage}&${queryStr}|">&lt;</a></li>
-                
+
                 <th:block th:each="i : ${#numbers.sequence(pagination.startPage, pagination.endPage)}">
                     <li th:classappend="${i == pagination.currentPage} ? 'active'">
                         <a th:href="|/info/listPage?cp=${i}&${queryStr}|" th:text="${i}">1</a>
                     </li>
                 </th:block>
-                
+
                 <li><a th:href="|/info/listPage?cp=${pagination.nextPage}&${queryStr}|">&gt;</a></li>
                 <li><a th:href="|/info/listPage?cp=${pagination.maxPage}&${queryStr}|">&gt;&gt;</a></li>
             </th:block>
         </ul>
+
+        <input type="hidden" id="searchListCount" th:if="${pagination != null}" th:value="${pagination.listCount}">
     </main>
 
     <th:block th:replace="~{common/footer}"></th:block>
     <script th:src="@{/js/info/infoList.js}"></script>
 </body>
+
 </html>
