--- a/semiProject/src/main/resources/templates/info/infoDetail.html
+++ b/semiProject/src/main/resources/templates/info/infoDetail.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,9 @@
     <link rel="stylesheet" th:href="@{/css/info/infoList.css}">
     <link rel="stylesheet" th:href="@{/css/info/infoDetail.css}">
 
-    <script type="text/javascript" 
-            src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=a81b56581a59372377c7388b669c6169&libraries=services&autoload=false"></script>
-    
+    <script type="text/javascript"
+        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=a81b56581a59372377c7388b669c6169&libraries=services&autoload=false"></script>
+
     <script src="https://kit.fontawesome.com/c0777c617e.js" crossorigin="anonymous"></script>
 </head>
 
@@ -20,17 +21,14 @@
     <main class="info-detail-container" th:if="${info != null}">
         <div class="detail-header">
             <h1 class="program-title" th:text="${info.progrmNm}">봉사 프로그램 명칭</h1>
-            </div>
+        </div>
 
         <div class="map-section">
             <div class="section-title-container">
                 <h3 class="section-title">📍 활동 장소</h3>
-                
                 <div class="scrap-area">
-                    <button id="scrapBtn" 
-                            th:if="${session.loginMember != null}" 
-                            th:classappend="${info.scrapCheck == 1} ? 'scrapped' : ''"
-                            th:data-infono="${info.infoBoardNo}">
+                    <button id="scrapBtn" th:if="${session.loginMember != null}"
+                        th:classappend="${info.scrapCheck == 1} ? 'scrapped' : ''" th:data-infono="${info.infoBoardNo}">
                         <i th:class="${info.scrapCheck == 1} ? 'fa-solid fa-star' : 'fa-regular fa-star'"></i>
                     </button>
                 </div>
@@ -50,15 +48,25 @@
 
         <table class="detail-info-table">
             <colgroup>
-                <col class="label-col"><col class="content-col">
-                <col class="label-col"><col class="content-col">
+                <col class="label-col">
+                <col class="content-col">
+                <col class="label-col">
+                <col class="content-col">
             </colgroup>
             <tbody>
                 <tr>
                     <th>봉사분야</th>
                     <td th:text="${info.actRm}">분야</td>
                     <th>모집인원</th>
-                    <td class="emp-text" th:text="|${info.rcritNmpr} 명|">인원</td>
+                    <td class="emp-text">
+                        <span id="nmprDisplay" th:text="${info.rcritNmpr}">인원</span>
+                    </td>
+                </tr>
+                <tr>
+                    <th>성인 참여</th>
+                    <td id="adultAt" th:text="${info.adultPosblAt}">상태</td>
+                    <th>청소년 참여</th>
+                    <td id="yngAt" th:text="${info.yngBgsPosblAt}">상태</td>
                 </tr>
                 <tr>
                     <th>등록기관</th>
@@ -74,10 +82,22 @@
                 </tr>
             </tbody>
         </table>
-
         <div class="content-box">
             <h3 class="section-title">📋 활동 상세 안내</h3>
-            <div class="content-text" th:utext="${info.progrmCn}">상세 내용</div>
+
+            <p class="simple-guide-text">
+                * 활동 참여 신청 및 상세 확인은 하단 <b>[신청하기]</b> 버튼을 통해 1365 사이트에서 진행 가능합니다.
+            </p>
+
+            <div th:if="${info.progrmCn != null and info.progrmCn != ''}" class="content-text"
+                th:utext="${info.progrmCn}">
+                상세 내용
+            </div>
+
+            <div th:unless="${info.progrmCn != null and info.progrmCn != ''}" class="content-text-empty">
+                등록된 활동 상세 안내 내용이 없습니다. <br>
+                하단 버튼을 클릭하여 신청 페이지에서 상세 내용을 확인해 주세요.
+            </div>
         </div>
 
         <div class="action-bar">
@@ -93,4 +113,5 @@
     </script>
     <script th:src="@{/js/info/infoDetail.js}"></script>
 </body>
+
 </html>
