--- a/semiProject/src/main/resources/static/css/common/main.css
+++ b/semiProject/src/main/resources/static/css/common/main.css
@@ -221,6 +221,12 @@ swiper-slide {
 .volun-info-title-text {
   font-weight: bold;
   font-size: 20px;
+  height: 58px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .info-board-section {
   padding-bottom: 40px;
