[FIX] 봉사후기 게시글 수정시 썸네일 안나오는 문제 및 게시글 작성시 빈칸으로 입력시 게시글 등록되던 문제 해결

--- a/semiProject/src/main/resources/templates/common/footer.html
+++ b/semiProject/src/main/resources/templates/common/footer.html
@@ -30,8 +30,16 @@
       const message = /*[[${message}]]*/ null;
 
       if (message != null) {
-        alert(message);
-        history.replaceState(null, "", location.pathname + location.search);
+        const navigationEntries =
+          window.performance.getEntriesByType("navigation");
+        const isBackForward =
+          navigationEntries.length > 0 &&
+          navigationEntries[0].type === "back_forward";
+
+        if (!isBackForward) {
+          alert(message);
+          history.replaceState(null, "", location.pathname);
+        }
       }
     </script>
   </body>
