[FIX] 비밀글 형식 수정(비밀번호 입력 삭제, 비밀글 클릭시 바로 alert창 띄우기), 글작성 시 사진만 올렸을 때 등록이 안되는 문제 해결

--- a/semiProject/src/main/resources/templates/board/boardList.html
+++ b/semiProject/src/main/resources/templates/board/boardList.html
@@ -104,9 +104,8 @@
                        th:text="${boardCode == 5 and #strings.equals(freeBoard.boardLock, 'Y') and (session.loginMember == null or (session.loginMember?.memberNo != freeBoard.memberNo and session.loginMember.authority != 2))} ? '🔒 비밀글입니다' : *{boardTitle}"
                        class="board-link"
                        th:data-lock="*{boardLock}"
-                       th:data-writer="${freeBoard.memberNo == session.loginMember?.memberNo}"
-                       th:data-board-no="*{boardNo}"
-                    >게시판 제목</a>
+                       th:data-writer-no="*{memberNo}"
+                       th:data-board-no="*{boardNo}">게시판 제목</a>
                   </td>
                   <td th:text="*{memberNickname}">작성자 닉네임</td>
                   <td th:text="*{boardWriteDate}">작성일</td>
