--- a/semiProject/src/main/resources/templates/board/boardWrite.html
+++ b/semiProject/src/main/resources/templates/board/boardWrite.html
@@ -97,7 +97,7 @@
                     <div id="secret-wrapper" style="display: none;">
                         <input type="checkbox" id="checkbox" name="checkbox" />
                         <label id="secret-check" for="checkbox">비밀글</label>
-                        <input type="password" placeholder="비밀글 설정시 비밀번호를 입력해주세요." id="board-pw" name="boardPw" />
+                        <input type="password" placeholder="비밀글 설정시 비밀번호를 입력해주세요." id="board-pw" name="boardPw" disabled />
                     </div>
                 </div>
             </div>
