[Fix] 관리자 페이지의 "FAQ"를 "고객지원"으로 수정

--- a/semiProject/src/main/resources/templates/admin/adminLayout.html
+++ b/semiProject/src/main/resources/templates/admin/adminLayout.html
@@ -49,7 +49,7 @@
                     <li th:classappend="${menu == 'support'} ? 'active'"> <!-- 고객지원 == support로 식별-->
                         <a th:href="@{/admin/support}">
                             <span class="menu-icon"><i class="fa-regular fa-user"></i></span>
-                            <span class="menu-text">FAQ</span>
+                            <span class="menu-text">고객지원</span>
                         </a>
                     </li>
 
