--- a/semiProject/src/main/resources/templates/admin/supportManage.html
+++ b/semiProject/src/main/resources/templates/admin/supportManage.html
@@ -1,7 +1,7 @@
 <section class="admin-main">
 
   <!-- 페이지 제목 -->
-  <h1 class="admin-page-title">FAQ</h1>
+  <h1 class="admin-page-title">고객지원</h1>
   <hr>
 
   <!-- ===============================
