--- a/semiProject/src/main/resources/templates/common/copyright.html
+++ b/semiProject/src/main/resources/templates/common/copyright.html
@@ -13,8 +13,8 @@
       <div class="policy-section">
         <h2>1. 사이트 콘텐츠 저작권</h2>
         <p>
-          '오합지졸' 내의 모든 로고, 디자인, 문구 및 봉사 정보 데이터의 저작권은
-          '오합지졸' 팀에 귀속됩니다.
+          '온기(On-Gi)' 내의 모든 로고, 디자인, 문구 및 봉사 정보 데이터의
+          저작권은 '온기(On-Gi)' 팀에 귀속됩니다.
         </p>
       </div>
       <div class="policy-section">
