--- a/semiProject/src/main/resources/templates/common/footer.html
+++ b/semiProject/src/main/resources/templates/common/footer.html
@@ -22,7 +22,7 @@
 
       <div class="footer-info">
         <p>이메일 : dhgkqwlwhf@gmail.com</p>
-        <p>Copyright 2026 오합지졸 All rights Reserved.</p>
+        <p>Copyright 2026 온기(On-Gi) All rights Reserved.</p>
       </div>
     </footer>
 
