--- a/semiProject/src/main/resources/templates/board/boardReport.html
+++ b/semiProject/src/main/resources/templates/board/boardReport.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/css/board/boardReport.css" />
     <link rel="stylesheet" href="/css/common/common.css" />
+    <title>게시글 신고</title>
   </head>
   <body>
     <th:blcok th:replace="~{common/header}" />
