--- a/semiProject/src/main/resources/templates/common/terms.html
+++ b/semiProject/src/main/resources/templates/common/terms.html
@@ -13,15 +13,15 @@
       <div class="policy-section">
         <h2>제 1 조 (목적)</h2>
         <p>
-          본 약관은 '오합지졸' 서비스의 이용 조건 및 절차에 관한 기본적인 사항을
-          규정함을 목적으로 합니다.
+          본 약관은 '온기(On-Gi)' 서비스의 이용 조건 및 절차에 관한 기본적인
+          사항을 규정함을 목적으로 합니다.
         </p>
       </div>
       <div class="policy-section">
         <h2>제 2 조 (용어의 정의)</h2>
         <p>
-          1. 서비스: '오합지졸'이 운영하는 웹사이트를 통해 제공하는 봉사 정보 및
-          커뮤니티 서비스를 의미합니다.
+          1. 서비스: '온기(On-Gi)'가 운영하는 웹사이트를 통해 제공하는 봉사 정보
+          및 커뮤니티 서비스를 의미합니다.
         </p>
         <p>
           2. 회원: 서비스에 접속하여 이 약관에 동의하고 이용 자격을 부여받은
