세미프로젝트 마지막

--- a/semiProject/src/main/resources/templates/info/infoDetail.html
+++ b/semiProject/src/main/resources/templates/info/infoDetail.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" th:href="@{/css/info/infoDetail.css}">
 
     <script type="text/javascript"
-        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=a81b56581a59372377c7388b669c6169&libraries=services&autoload=false"></script>
+        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a81b56581a59372377c7388b669c6169&libraries=services"></script>
 
     <script src="https://kit.fontawesome.com/c0777c617e.js" crossorigin="anonymous"></script>
 </head>
