--- a/semiProject/src/main/resources/templates/info/infoDetail.html
+++ b/semiProject/src/main/resources/templates/info/infoDetail.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" th:href="@{/css/info/infoList.css}">
     <link rel="stylesheet" th:href="@{/css/info/infoDetail.css}">
 
-    <script type="text/javascript"
-        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=a81b56581a59372377c7388b669c6169&libraries=services&autoload=false"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a81b56581a59372377c7388b669c6169&libraries=services"></script>
 
     <script src="https://kit.fontawesome.com/c0777c617e.js" crossorigin="anonymous"></script>
 </head>
@@ -82,18 +81,15 @@
                 </tr>
             </tbody>
         </table>
+
         <div class="content-box">
             <h3 class="section-title">📋 활동 상세 안내</h3>
-
             <p class="simple-guide-text">
                 * 활동 참여 신청 및 상세 확인은 하단 <b>[신청하기]</b> 버튼을 통해 1365 사이트에서 진행 가능합니다.
             </p>
-
-            <div th:if="${info.progrmCn != null and info.progrmCn != ''}" class="content-text"
-                th:utext="${info.progrmCn}">
+            <div th:if="${info.progrmCn != null and info.progrmCn != ''}" class="content-text" th:utext="${info.progrmCn}">
                 상세 내용
             </div>
-
             <div th:unless="${info.progrmCn != null and info.progrmCn != ''}" class="content-text-empty">
                 등록된 활동 상세 안내 내용이 없습니다. <br>
                 하단 버튼을 클릭하여 신청 페이지에서 상세 내용을 확인해 주세요.
